Ajout infos du user dans deratils annonce
